2003-12-16  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: 
	* src/planner-project-properties.c:
	* src/planner-task-tree.c:
	* src/planner-cmd-manager.c: More undo work.
	
	* data/ui/task-view.ui:
	* src/planner-task-view.c:
	* src/planner-gantt-view.c: Add critical task highlighting for the
	task view.

2003-12-15  Richard Hult  <richard@imendio.com>

	* src/planner-cmd-manager.c (planner_cmd_manager_insert_and_do):
	Trim the history if it's too long.

	* src/planner-html-plugin.c (html_plugin_ok_button_clicked): Fix
	bug #129375.

	* src/planner-cmd-manager.c: More work.

	* src/planner-task-tree.c: (task_cmd_insert_do),
	(task_cmd_insert),
	(planner_task_tree_insert_task): 
	(planner_task_tree_insert_subtask): Start editing for newly
	inserted tasks.
	
	* src/planner-window.c: (window_finalize): Unref the cmd manager.

2003-12-14  Richard Hult  <richard@imendio.com>

	* configure.in:
	* docs/libplanner/Makefile.am: Clean up flags even more, and fix
	bug #129321.

2003-12-14  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-object.[ch]
	* libplanner/mrp-private.h:
	* libplanner/mrp-project.c: Work in progress.

2003-12-14  Cédric Delfosse <cdelfosse@free.fr>

	* src/planner-print-dialog.c:
	(load_planner_print_config_from_file),
	(save_planner_print_config_to_file):
	* src/planner-window.c: (window_print_cb): Remember print
	settings.

2003-12-13  Richard Hult  <richard@imendio.com>

	* .cvsignore:
	* data/glade/.cvsignore:
	* docs/libplanner/libplanner-sections.txt:
	* docs/libplanner/tmpl/libplanner-unused.sgml:
	* docs/libplanner/tmpl/mrp-error.sgml: Clean up.
	
	* src/planner-project-properties.c: (property_cmd_edit),
	(mpp_connect_to_project), (mpp_phase_option_menu_changed_cb),
	(mpp_phase_set_from_widget), (mpp_project_phase_notify_cb),
	(mpp_setup_phases), (mpp_property_added), (mpp_dialog_destroy_cb):
	More undo hacking.

2003-12-12  Xavier Ordoquy <xordoquy@wanadoo.fr>

	* src/planner-ttable-model.h: typo
